tests/fixtures/invalid/if-4.py
a = 1
if 1 == 1:
    pass

a = 1
# Comment before statement with no blank line before
if a == 1:
    pass

a = """
Multiline string assignment
"""
if a == 1:
    pass

if a == 1:
    pass
if a == 1:
    pass
